--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,5 +26,5 @@ jobs:
       - run: go test -v ./...
       - run: go get github.com/mitchellh/gox
       - run: go get github.com/tcnksm/ghr  
-      - run: gox -ldflags "-X main.Version $BUILD_VERSION -X main.BuildDate 1.0.1" -output "dist/ncd_{{.OS}}_{{.Arch}}" -os="linux windows"
+      - run: gox -os="linux darwin windows" -arch="amd64" -output="dist/bam_{{.OS}}_{{.Arch}}"
       - run: ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
